- fixing icons spacing - fixing font family - adding more alerts samples [AD-548]

--- a/src/Alert/css/main.css
+++ b/src/Alert/css/main.css
@@ -1,7 +1,6 @@
 /* ALERTS */
 body {
     color: #2b2a29;
-    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-size: 1em;
     font-size: 100%;
