--- a/src/Alert/css/overrides.css
+++ b/src/Alert/css/overrides.css
@@ -7,6 +7,7 @@
 
 #alert {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
     font-stretch: unset !important;
     font-weight: 300 !important;
     font-size: 16px !important;
@@ -22,8 +23,8 @@
 .alert__message::before {
     content: '';
     position: absolute;
-    top: 0.75rem;
-    left: -1.5rem;
+    top: 0.71rem;
+    left: -1.25rem;
     width: 24px;
     height: 24px;
     background-repeat: no-repeat;
@@ -37,7 +38,6 @@
     flex: 1;
     font-weight: 400 !important;
     font-size: 16px;
-    font-family: 'Roboto', sans-serif !important;
     font-stretch: unset;
     line-height: 1.6rem;
 }
@@ -70,6 +70,8 @@
 #alert #alert-link-endmasquerade:hover,
 #alert #alert-link:hover {
     cursor: pointer;
+    background-color: #fff;
+    color: #51247a;
 }
 
 #alert #alert-container.clickable:hover {
@@ -100,12 +102,6 @@
     color: #fff;
 }
 
-.info #alert-link-endmasquerade:hover,
-.info #alert-link:hover {
-    background-color: #fff;
-    color: #51247a;
-}
-
 .info .alert__message::before {
     background-image: url('data:image/svg+xml,%3csvg viewBox=%270 0 24 24%27 fill=%27none%27 xmlns=%27http://www.w3.org/2000/svg%27%3e%3ccircle cx=%2712%27 cy=%2712%27 r=%279.25%27 transform=%27rotate%28-180 12 12%29%27 stroke=%27%23fff%27 stroke-width=%271.5%27%3e%3c/circle%3e%3cpath d=%27M12 16.2v-4%27 stroke=%27%23fff%27 stroke-width=%271.5%27 stroke-linecap=%27round%27%3e%3c/path%3e%3ccircle cx=%2712%27 cy=%278.4%27 r=%271.1%27 transform=%27rotate%28-180 12 8.4%29%27 fill=%27%23fff%27%3e%3c/circle%3e%3c/svg%3e');
 }
@@ -134,7 +130,7 @@
 
 .urgent #alert-link-endmasquerade,
 .urgent #alert-link {
-    color: #fff;
+    color: inherit;
 }
 
 .urgent #alert-link-endmasquerade:hover,
